Refactoring the controller to make it skinny

--- a/views/attack1.erb
+++ b/views/attack1.erb
@@ -2,7 +2,7 @@
   <img src="https://media.giphy.com/media/hTcWHo0J3W5tC/giphy.gif" width="800">
   <br></br>
   <br></br>
-  <figcaption> <%= @player1 %> misses a high five! </figcaption>
+  <figcaption> <%= @game.player1.name %> misses a high five! </figcaption>
   <br></br>
   <br></br>
   <br></br>
